Simple/GoHorseParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GoHorse.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class GoHorseParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, EOL=11, NUMBER=12, INT=13, FLOAT_NUM=14, INTEGER=15, FLOAT=16, 
		BOOLEAN=17, BOOL_TRUE=18, BOOL_FALSE=19, STRING=20, ARRAY=21, CUSTOM_TYPE=22, 
		REFERENCE=23, READ=24, WRITE=25, ID=26, ARRAY_SIZE=27, COMMA=28, COLON=29, 
		ASSIGN=30, LPAREN=31, RPAREN=32, LBRACKET=33, RBRACKET=34, PLUS=35, MINUS=36, 
		MULT=37, DIV=38, MOD=39, AND=40, OR=41, NOT=42, EQ=43, NEQ=44, LT=45, 
		GT=46, LTE=47, GTE=48, COMMENT=49, WS=50;
	public const int
		RULE_program = 0, RULE_stat = 1, RULE_readln = 2, RULE_writeln = 3, RULE_ifStat = 4, 
		RULE_whileStat = 5, RULE_untilStat = 6, RULE_forStat = 7, RULE_assign = 8, 
		RULE_varDecl = 9, RULE_assignment = 10, RULE_refeExpr = 11, RULE_func = 12, 
		RULE_params = 13, RULE_param = 14, RULE_orExpr = 15, RULE_andExpr = 16, 
		RULE_equalExpr = 17, RULE_relatExpr = 18, RULE_addExpr = 19, RULE_multExpr = 20, 
		RULE_unary_expr = 21, RULE_primary_expr = 22, RULE_expr = 23, RULE_term = 24, 
		RULE_factor = 25, RULE_type = 26;
	public static readonly string[] ruleNames = {
		"program", "stat", "readln", "writeln", "ifStat", "whileStat", "untilStat", 
		"forStat", "assign", "varDecl", "assignment", "refeExpr", "func", "params", 
		"param", "orExpr", "andExpr", "equalExpr", "relatExpr", "addExpr", "multExpr", 
		"unary_expr", "primary_expr", "expr", "term", "factor", "type"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'if'", "'else'", "'while'", "'repeat'", "'until'", "'for'", 
		"'['", "']'", "'func'", null, null, null, null, "'integer'", "'float'", 
		"'boolean'", "'true'", "'false'", null, "'array'", null, "'&'", "'readln'", 
		"'writeln'", null, null, "','", "':'", "'='", "'('", "')'", "'{'", "'}'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'=='", "'!='", 
		"'<'", "'>'", "'<='", "'>='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "EOL", 
		"NUMBER", "INT", "FLOAT_NUM", "INTEGER", "FLOAT", "BOOLEAN", "BOOL_TRUE", 
		"BOOL_FALSE", "STRING", "ARRAY", "CUSTOM_TYPE", "REFERENCE", "READ", "WRITE", 
		"ID", "ARRAY_SIZE", "COMMA", "COLON", "ASSIGN", "LPAREN", "RPAREN", "LBRACKET", 
		"RBRACKET", "PLUS", "MINUS", "MULT", "DIV", "MOD", "AND", "OR", "NOT", 
		"EQ", "NEQ", "LT", "GT", "LTE", "GTE", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GoHorse.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GoHorseParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GoHorseParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GoHorseParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncContext[] func() {
			return GetRuleContexts<FuncContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncContext func(int i) {
			return GetRuleContext<FuncContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 56;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case T__1:
					case T__3:
					case T__4:
					case T__6:
					case INTEGER:
					case FLOAT:
					case BOOLEAN:
					case STRING:
					case ARRAY:
					case CUSTOM_TYPE:
					case READ:
					case WRITE:
					case ID:
						{
						State = 54;
						stat();
						}
						break;
					case T__9:
						{
						State = 55;
						func();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 60;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ReadlnContext readln() {
			return GetRuleContext<ReadlnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WritelnContext writeln() {
			return GetRuleContext<WritelnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatContext ifStat() {
			return GetRuleContext<IfStatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileStatContext whileStat() {
			return GetRuleContext<WhileStatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UntilStatContext untilStat() {
			return GetRuleContext<UntilStatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForStatContext forStat() {
			return GetRuleContext<ForStatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 2, RULE_stat);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61;
				readln();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62;
				writeln();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63;
				ifStat();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 64;
				whileStat();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 65;
				untilStat();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 66;
				forStat();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 67;
				varDecl();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 68;
				assignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReadlnContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode READ() { return GetToken(GoHorseParser.READ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GoHorseParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(GoHorseParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GoHorseParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REFERENCE() { return GetToken(GoHorseParser.REFERENCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WRITE() { return GetToken(GoHorseParser.WRITE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GoHorseParser.STRING, 0); }
		public ReadlnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_readln; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterReadln(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitReadln(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReadln(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReadlnContext readln() {
		ReadlnContext _localctx = new ReadlnContext(Context, State);
		EnterRule(_localctx, 4, RULE_readln);
		int _la;
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case READ:
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				Match(READ);
				State = 72;
				Match(LPAREN);
				State = 73;
				Match(ID);
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==REFERENCE) {
					{
					State = 74;
					Match(REFERENCE);
					}
				}

				State = 77;
				Match(RPAREN);
				}
				break;
			case WRITE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				Match(WRITE);
				State = 79;
				Match(LPAREN);
				State = 82;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 80;
					expr(0);
					}
					break;
				case 2:
					{
					State = 81;
					Match(STRING);
					}
					break;
				}
				State = 84;
				Match(RPAREN);
				State = 85;
				Match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WritelnContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WRITE() { return GetToken(GoHorseParser.WRITE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GoHorseParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GoHorseParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode READ() { return GetToken(GoHorseParser.READ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(GoHorseParser.ID, 0); }
		public WritelnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_writeln; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterWriteln(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitWriteln(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWriteln(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WritelnContext writeln() {
		WritelnContext _localctx = new WritelnContext(Context, State);
		EnterRule(_localctx, 6, RULE_writeln);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case WRITE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 88;
				Match(WRITE);
				State = 89;
				Match(LPAREN);
				State = 90;
				expr(0);
				State = 91;
				Match(RPAREN);
				}
				break;
			case READ:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				Match(READ);
				State = 94;
				Match(LPAREN);
				State = 95;
				Match(ID);
				State = 96;
				Match(RPAREN);
				State = 97;
				Match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GoHorseParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GoHorseParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext[] program() {
			return GetRuleContexts<ProgramContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext program(int i) {
			return GetRuleContext<ProgramContext>(i);
		}
		public IfStatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterIfStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitIfStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStatContext ifStat() {
		IfStatContext _localctx = new IfStatContext(Context, State);
		EnterRule(_localctx, 8, RULE_ifStat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(T__1);
			State = 101;
			Match(LPAREN);
			State = 102;
			expr(0);
			State = 103;
			Match(RPAREN);
			State = 104;
			program();
			State = 107;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 105;
				Match(T__2);
				State = 106;
				program();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileStatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GoHorseParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GoHorseParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext program() {
			return GetRuleContext<ProgramContext>(0);
		}
		public WhileStatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileStat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterWhileStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitWhileStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileStatContext whileStat() {
		WhileStatContext _localctx = new WhileStatContext(Context, State);
		EnterRule(_localctx, 10, RULE_whileStat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(T__3);
			State = 110;
			Match(LPAREN);
			State = 111;
			expr(0);
			State = 112;
			Match(RPAREN);
			State = 113;
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UntilStatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext program() {
			return GetRuleContext<ProgramContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GoHorseParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GoHorseParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOL() { return GetToken(GoHorseParser.EOL, 0); }
		public UntilStatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_untilStat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterUntilStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitUntilStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUntilStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UntilStatContext untilStat() {
		UntilStatContext _localctx = new UntilStatContext(Context, State);
		EnterRule(_localctx, 12, RULE_untilStat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(T__4);
			State = 116;
			program();
			State = 117;
			Match(T__5);
			State = 118;
			Match(LPAREN);
			State = 119;
			expr(0);
			State = 120;
			Match(RPAREN);
			State = 121;
			_la = TokenStream.LA(1);
			if ( !(_la==T__0 || _la==EOL) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForStatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GoHorseParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AssignContext[] assign() {
			return GetRuleContexts<AssignContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignContext assign(int i) {
			return GetRuleContext<AssignContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GoHorseParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext program() {
			return GetRuleContext<ProgramContext>(0);
		}
		public ForStatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forStat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.EnterForStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoHorseListener typedListener = listener as IGoHorseListener;
			if (typedListener != null) typedListener.ExitForStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoHorseVisitor<TResult> typedVisitor = visitor as IGoHorseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForStatContext forStat() {
		ForStatContext _localctx = new ForStatContext(Context, State);
		EnterRule(_localctx, 14, RULE_forStat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			Match(T__6);
			State = 124;
			Match(LPAREN);
			State = 125;
			assign();
			State = 126;
			Match(T__0);
			State = 127;
			expr(0);
			State = 128;
			Match(T__0);
			State = 129;
			assign();
			State = 130;
			Match(RPAREN);
			State = 131;
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(GoHorseParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(GoHorseParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
